@@ -1,9 +1,27 @@
 dependencies {
     implementation project(':api:api-commons')
-
+    implementation project(':application:inventory-app')
     implementation project(':domain:inventory-domain')
-    implementation project(":infra:rdb:inventory-db")
-    implementation project(":infra:queue:inventory-kafka")
+    implementation project(':infra:rdb:inventory-db')
+    implementation project(':infra:queue:inventory-kafka')
+    implementation project(':infra:uuid-impl')
 
     implementation project(":support:web-api")
+    implementation "jakarta.persistence:jakarta.persistence-api:3.1.0"
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'com.fasterxml.jackson.core:jackson-databind'
+    testImplementation 'com.h2database:h2'
+}
+
+test {
+    useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+        showStandardStreams = true
+    }
+    // 버전 업데이트 경고 로그 삭제를 위해 추가
+    jvmArgs += ["-XX:+EnableDynamicAgentLoading"]
+
+    systemProperty "spring.profiles.active", "local"
 }
